--- a/app/src/main/res/layout/activity_count_step.xml
+++ b/app/src/main/res/layout/activity_count_step.xml
@@ -105,16 +105,15 @@
             android:layout_centerInParent="true"
             android:rotation="90"
             android:background="@color/silver"/>
-
         <TextView
             android:id="@+id/distanceContent_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginEnd="30dp"
             android:layout_toStartOf="@id/dividerLine"
-            android:textColor="@color/white"
+            android:layout_marginEnd="30dp"
             android:textSize="18sp"
+            android:textColor="@color/white"
             tools:ignore="RelativeOverlap" />
 
         <TextView
@@ -167,10 +166,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp" />
+            android:layout_margin="20dp"
+            />
     </RelativeLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
